Fixed bug in footrt (wrong color)

--- a/css/stylesheet-main.css
+++ b/css/stylesheet-main.css
@@ -252,6 +252,7 @@ margin: auto;
 #footer table td{
 width: 33%;
 vertical-align: middle;
+color: #FFFFFF;
 }
 
 #footer a{
